--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,12 @@
 {
   "name": "HASAN TELECOM Vault",
   "short_name": "HT Vault",
-  "description": "Inventory management app for Hasan Telecom",
-  "start_url": "./index.html",
+  "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#0f172a",
+  "background_color": "#2563eb",
   "theme_color": "#2563eb",
-  "orientation": "portrait-primary",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
