--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "HT Vault",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#2563eb",
   "theme_color": "#2563eb",
+  "background_color": "#0f172a",
   "icons": [
     { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
