--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
-  "name": "HASAN TELECOM Vault",
+  "name": "Hasan Telecom Pro Vault",
   "short_name": "HT Vault",
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
-  "theme_color": "#2563eb",
   "background_color": "#0f172a",
+  "theme_color": "#2563eb",
   "icons": [
-    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "logo.png",   <-- CHANGED THIS LINE
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
   ]
 }
