--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,10 @@
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#2563eb",
+  "orientation": "portrait",
   "icons": [
     {
-      "src": "logo.png",   <-- CHANGED THIS LINE
+      "src": "logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
