--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,23 @@
 {
-  "name": "Hasan Telecom Pro Vault",
+  "name": "HASAN TELECOM - Pro Vault",
   "short_name": "HT Vault",
-  "start_url": "index.html",
+  "description": "Offline inventory vault for HASAN TELECOM",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#2563eb",
   "orientation": "portrait",
+  "background_color": "#020617",
+  "theme_color": "#2563eb",
   "icons": [
     {
       "src": "logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
