--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "HASAN TELECOM - Pro Vault",
+  "name": "Hasan Telecom Pro Vault",
   "short_name": "HT Vault",
-  "description": "Offline inventory vault for HASAN TELECOM",
-  "start_url": "./index.html",
-  "scope": "./",
+  "description": "Inventory and Price Management for Hasan Telecom",
+  "start_url": ".",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#020617",
   "theme_color": "#2563eb",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "logo.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "logo.png",
